--- a/Views/Places/Index.cshtml
+++ b/Views/Places/Index.cshtml
@@ -3,7 +3,7 @@
   <head>
     <meta charset='utf-8'>
     <title>Favorite Places</title>
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
   </head>
   <body>
     <div class="jumbotron text-center">
@@ -11,17 +11,28 @@
     </div>
     <div class="well text-center">
       <h3>Current List of Favorite Cities:</h3>
-      <ul style="list-style-position: inside;">
-        @foreach(var place in Model)
-        {
-          <li>@place.GetCity()</li>
-          <ul style="list-style-position: inside;">
-            <li>Length of Stay: @place.GetStayTime</li>
-            <li><a href='"' + @place.GetImage() + '"'>Link to picture</a></li>
+      @foreach(var place in Model)
+      {
+      <div class="row">
+        <div class="col-sm-4">
+        </div>
+        <div class="col-sm-4">
+          <ul style="list-style: none;">
+            <li>@place.GetCity()</li>
+            <li>Length of Stay: @place.GetStayTime() days</li>
+            <li><a href="@place.GetImage()">Link to picture</a></li>
           </ul>
-        }
-      </ul>
-      <h4><a href="/places/new">Add Your Favorite City!</a></h4>
+        </div>
+        <div class="col-sm-4">
+        </div>
+      </div>
+      }
+    </div>
+    <div class="well text-center">
+      <h4><a href="/places/new">Add Your Favorite City!</a></h4><br>
+      <form action='/places/clear' method="post">
+        <button type='submit' class='btn btn-success'>Clear List</button>
+      </form>
     </div>
   </body>
 </html>
